README and package.json updates

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "author": "Ryan Harris",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/RyanHarrisFL/FriendFinder/issues"
+    "url": "https://github.com/RyanHarrisFL/Friends-FinderV3/issues"
   },
-  "homepage": "https://github.com/RyanHarrisFL/FriendFinder#readme"
+  "homepage": "https://ryanharrisfl.github.io/Friends-FinderV3/"
 }
